--- a/src/components/Technologies/technologies.css
+++ b/src/components/Technologies/technologies.css
@@ -5,51 +5,53 @@
 }
 
 .technologies-container {
-    width: 80%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 10vh;
+    padding: 5% 0 0 0;
 }
 
 .technologies-img {
-    width: 90%;
-    height: 33vh;
-    background: linear-gradient(0deg, rgba(48, 44, 66, 0.79), rgba(48, 44, 66, 0.79));
-    border-radius: 150px 150px 150px 150px;
+    background-size: cover;
+    background-position: top center;
+    padding: 10% 0 10% 0;
+    width: 100%;
+    border-radius: 150px;;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
 }
 
-.technologies-h1-first {
-    font-size: 5vh;
-}
 
 .technologies-h1 {
-    font-size: 5vh;
     font-weight: lighter;
 }
 
 .arrow-container {
-    width: 4vw;
-    height: 8vh;
+    margin-top: -4%;
+}
+
+.arrow-down {
+    margin-top: 40%;
+    padding: 35% 20% 35% 20% ;
+    width: 140%;
+    height: 50%;
     border-radius: 50%;
     border: 10px solid black;
     background: linear-gradient(267.61deg, #C0B7E8 -0.6%, #8176AF 98.31%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    margin-top: 33vh;
 }
 
 .technologies-logo-container {
-    width: 90%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
+}
+
+.technologies-logo > img {
+    width: 100%;
 }
 
 .ArrowLeft {
@@ -61,6 +63,11 @@
 }
 
 @media screen and (max-width: 750px) {
+
+    .technologies-h1-first {
+        font-size: 140%;
+    }
+
     .arrow-container {
         display: none;
     }
@@ -72,6 +79,8 @@
     .technologies-logo-main {
         display: flex;
         align-items: center;
+        padding: 5%;
+
     }
 
     .technologies-logo-main > div {
@@ -79,6 +88,10 @@
         height: 40px;
         border-radius: 50%;
         background: linear-gradient(267.61deg, #C0B7E8 -0.6%, #8176AF 98.31%);
+    }
+
+    .technologies-img {
+        background-position: center center;
     }
 
     .ArrowLeft {
@@ -91,38 +104,3 @@
         display: block;
     }
 }
-
-/* @media screen and (max-width: 992px) {
-    .technologies-container {
-        width: 95%;
-        margin-top: 10vh;
-    }
-
-    .arrow-container {
-        width: 7vw;
-        height: 12vh;
-    }
-
-    .arrow-down {
-        margin-right: 2vw;
-    }
-}
-
-@media screen and (max-width: 992px) {
-    .arrow-container {
-        width: 10vw;
-    }
-}
-
-@media screen and (max-width: 576px) {
-    .arrow-container {
-        width: 14vw;
-    }
-}
-
-
-@media screen and (max-width: 480px) {
-    .arrow-container {
-        width: 16vw;
-    }
-} */
