--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -1,26 +1,27 @@
-.hero-button {
-    /* width: 214px; */
-    /* height: 48px; */
-    height: 50px;
+.hero-Button {
+    width: 200px;
+    height: 48px;
+    border: 1px solid rgba(48, 44, 66, 1);
+    color: rgba(48, 44, 66, 1);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    font-size: 65%;
+    line-height: 100%;
+    vertical-align: top;
     margin-right: 5px;
     border-radius: 40px;
     background: linear-gradient(to right,rgba(129, 118, 175, 1), rgba(192, 183, 232, 1));
-    border: 1px solid rgba(48, 44, 66, 1);
-    /* margin-right: 2vw; */
 }
 
 .hero-container {
-    width: 90%;
     margin: 40px auto 0;
     display: flex;
     justify-content: space-around;
-    /* margin-top: 2vh; */
 }
 
 .hero-h1 {
     display: flex;
     align-items: center;
-    /* font-size: 6vh; */
 }
 
 .hero-button-div {
@@ -31,13 +32,11 @@
 .hero-text {
     display: grid;
     flex: 0.5;
-
+    width: 100%;
     font-size: 20px;
     line-height: 40px;
-    /* height: 50vh; */
-    /* position: relative; */
-    /* padding-right: 10vw; */
 }
+
 .hero-img {
     flex: 0.5;
 }
@@ -75,6 +74,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        width: 100%;
+        padding: 4%;
     }
 
     .shape {
@@ -84,42 +85,16 @@
     .hero-img {
         margin-top: 30px;
     }
-}
 
-/* 
+    .hero-Button {
+        width: 90%;
+    }
 
- @media screen and (max-width: 992px) {
-    .hero-text p {
-        margin-left: 2vw;
+    .hero-button-div > a {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        text-decoration: none;
     }
 }
 
-@media screen and (max-width: 768px) {
-    .hero-text div {
-        margin-left: 2vw;
-    }
-
-    .hero-button {
-        width: 22vw;
-        height: 8vh;
-    }
-
-    .shape {
-        width: 4vw;
-    }
-
-}
-
-@media screen and (max-width: 576px) {
-    .hero-button {
-        width: 28vw;
-        height: 7vh;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .hero-button {
-        width: 35vw;
-    }
-}
- */
