--- a/src/components/Join-hydra/joinHydra.css
+++ b/src/components/Join-hydra/joinHydra.css
@@ -1,7 +1,21 @@
 .join-section {
+    width: 100%;
     display: flex;
     justify-content: center;
-    padding-top: 10vh;
+    padding-top: 5%;
+}
+
+.hero-button {
+    border: 1px solid rgba(48, 44, 66, 1);
+    color: rgba(48, 44, 66, 1);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    font-size: 65%;
+    line-height: 100%;
+    vertical-align: top;
+    margin-right: 5px;
+    border-radius: 40px;
+    background: linear-gradient(to right,rgba(129, 118, 175, 1), rgba(192, 183, 232, 1));
 }
 
 .join-container {
@@ -9,20 +23,28 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    width: 80%;
-    height: 95vh;
+    width: 100%;
+    padding: 7%;
     color: black;
     background: radial-gradient(50% 50% at 50% 50%, #403A5F 0%, #211E2E 100%);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 100px;
 }
 
+.join-form-container {
+    width: 100%;
+}
+
 .join-form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 60vh;
+    padding: 5%;
     justify-content: space-around;
+}
+
+.join-form > div > input {
+    padding-left: 3%;
 }
 
 .join-header {
@@ -32,13 +54,19 @@
 }
 
 .vector-16 {
-    padding: 2vh;
+    padding: 3%;
 }
 
 .join-small-inputs {
     display: flex;
     justify-content: space-around;
-    width: 70vw;
+    width: 100%;
+    padding: 1%;
+}
+
+.join-small-inputs > input {
+    width: 45%;
+    padding: 3% 0 3% 0;
 }
 
 .join-h1 {
@@ -59,8 +87,7 @@ form div input {
     border-radius: 40px;
     background: border-box;
     color: #FFFFFF;
-    width: 33vw;
-    height: 8vh;
+    width: 50%;
     font-size: large;
 }
 
@@ -69,55 +96,55 @@ form div input {
     text-align: top;
 }
 
+.join-form > div {
+    display: flex;
+    width: 100%;
+}
+
+.join-input-subject-container {
+    width: 90%;
+    padding: 2% 2% 2% 0% ;
+    margin-left: 7%;
+}
+
 .join-input-subject {
-    width: 68vw;
+    width: 94%;
+    padding: 3% 0 3% 0;
 }
 
 .join-input-tellUs {
-    width: 68vw;
-    height: 20vh;
+    width: 92%;
+    padding: 10% 0 10% 0 ;
+    margin-left: 4% ;
+}
+
+.hero-button {
+    width: 25%;
+    padding: 3% 0 3% 0;
+    margin-top: 3%;
 }
 
 @media screen and (max-width: 750px) {
     .join-small-inputs {
         flex-direction: column;
-        padding: 5px;
+        padding: 3%;
     }
     .join-small-inputs > input {
         width: 100%;
-        padding: 20px;
+        padding: 7%;
+    }
+
+    .join-input-subject {
+        padding: 7%;
+    }
+
+    .join-input-tellUs {
+        padding: 15%;
     }
 
     .hero-button {
-        width: 150px;
-    } 
-}
-
-/* @media screen and (max-width: 992px) {
-    .join-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-        width: 90%;
-        height: 95vh;
-        color: black;
-        background: radial-gradient(50% 50% at 50% 50%, #403A5F 0%, #211E2E 100%);
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        border-radius: 100px;
+        width: 40%;
+        padding: 5% 0 5% 0;
     }
 }
 
-@media screen and (max-width: 480px) {
-    .join-small-inputs {
-        width: 120vw;
-    }
-
-    .join-small-inputs input {
-        width: 55vw;
-    }
-
-    .join-form div input {
-        width: 120vw;
-    }
-} */
